Jatkettu Spring Boot -muutoksia